# STM32CMake_Example

./: .gitignore  .mxproject  CMakeLists.txt  Demo.ioc  Makefile  README.md
Core/Src/: main.c  stm32f4xx_hal_msp.c
